# bevy_efficient_forest_rendering

./: Cargo.toml
assets/: tree.glb
assets/shaders/: chunk_instancing.wgsl  grass.wgsl
examples/: forest.rs
examples/helper/: free_camera.rs  mod.rs  orbit_camera.rs  overlay.rs
src/: chunk_grass.rs  chunk_instancing.rs  lib.rs
