[package]
name = "bevy_efficient_forest_rendering"
authors = ["Pinkponk <henrik.djurestal@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bytemuck = "1.11.0"
rand = "*"
# bevy_shader_utils = { path = "../bevy-examples/libs/bevy_shader_utils" }
noise = "0.7"  #Procedural Noise Generation library for Rust
bevy-inspector-egui = "0.12"

[dev-dependencies]
iyes_loopless = "0.7.1"
iyes_progress = "0.5.0"
bevy_asset_loader = { version = "0.12.0", features = ["stageless"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "= 0.2.81" }
bevy_web_fullscreen = { git = "https://github.com/ostwilkens/bevy_web_fullscreen.git" }